--- a/css/styles.css
+++ b/css/styles.css
@@ -325,3 +325,66 @@ img {
 .footer-text {
   max-width: 264px;
 }
+
+.navbar::after {
+  width: 48px;
+  height: 4px;
+  background-color: #fff;
+  content: "";
+}
+
+.navbar:active::after {
+  background-color: #404bbf;
+}
+
+.order {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/order-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.benefits-icons-list {
+  display: flex;
+  gap: 24px;
+}
+.benefits-icons-item {
+  width: calc((100% - 3 * 24px) / 4);
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background: #f4f4fd;
+}
+.benefits-icons-container {
+  padding: 24px 100px;
+  margin-bottom: 8px;
+}
+
+.ourteam-text {
+  margin-bottom: 8px;
+}
+
+.ourteam-icons-list {
+  display: flex;
+  gap: 24px;
+}
+
+.ourteam-icons-item {
+  display: flex;
+  width: 40px;
+  height: 40px;
+}
+
+.ourteam-icons-list .soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
