--- a/css/styles.css
+++ b/css/styles.css
@@ -59,13 +59,14 @@ img {
   color: #2e2f42;
 }
 
-.nav-ul .navbar {
+.navbar {
   color: #2e2f42;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address {
@@ -77,6 +78,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-ul .navbar:hover,
@@ -91,6 +93,16 @@ img {
 
 .order {
   background-color: #2e2f42;
+  max-width: 1440px;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/order-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .page-title {
@@ -121,6 +133,7 @@ img {
   min-height: 56px;
   border: none;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-order:focus,
@@ -192,8 +205,15 @@ img {
   letter-spacing: 0.02em;
 }
 
+/* =====HW2====== */
+
+/* =====HW3====== */
+
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -326,42 +346,40 @@ img {
   max-width: 264px;
 }
 
-.navbar::after {
-  width: 48px;
-  height: 4px;
-  background-color: #fff;
+/* =====HW3====== */
+
+/* =====HW4====== */
+
+.studio {
+  position: relative;
+  color: #404bbf;
+}
+
+.studio::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
   content: "";
-}
-
-.navbar:active::after {
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
   background-color: #404bbf;
-}
-
-.order {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(/images/order-background.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
 }
 
 .benefits-icons-list {
   display: flex;
   gap: 24px;
 }
-.benefits-icons-item {
-  width: calc((100% - 3 * 24px) / 4);
-  border-radius: 4px;
+
+.benefits-icons-container {
+  display: flex;
+  align-items: center;
+  height: 112px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
-}
-.benefits-icons-container {
   padding: 24px 100px;
   margin-bottom: 8px;
+  border-radius: 4px;
 }
 
 .ourteam-text {
