--- a/css/styles.css
+++ b/css/styles.css
@@ -82,10 +82,7 @@ img {
 }
 
 .nav-ul .navbar:hover,
-.contacts-link:hover {
-  color: #404bbf;
-}
-
+.contacts-link:hover,
 .nav-ul .navbar:focus,
 .contacts-link:focus {
   color: #404bbf;
@@ -176,6 +173,10 @@ img {
 
 .ourteam-item {
   background-color: #ffffff;
+  width: calc((100% - 3 * 24px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .ourteam-title,
@@ -286,11 +287,6 @@ img {
   gap: 24px;
 }
 
-.ourteam-item {
-  width: calc((100% - 3 * 24px) / 4);
-  border-radius: 0px 0px 4px 4px;
-}
-
 .ourteam-subtitle-text {
   padding: 32px 0;
 }
@@ -327,6 +323,12 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-subtitle {
@@ -374,6 +376,7 @@ img {
 .benefits-icons-container {
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 112px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
@@ -388,6 +391,7 @@ img {
 
 .ourteam-icons-list {
   display: flex;
+  justify-content: center;
   gap: 24px;
 }
 
@@ -405,4 +409,38 @@ img {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.soc-link:hover,
+.soc-link:focus {
+  background-color: #404bbf;
+}
+
+.ourteam-icon {
+  fill: #f4f4fd;
+}
+
+.portfolio-image-container {
+  overflow: hidden;
+  position: relative;
+}
+
+.portfolio-text-absolute {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-text-absolute {
+  transform: translateY(0%);
 }
