--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  max-width: 1440px;
 }
 
 .page-title {
