--- a/css/styles.css
+++ b/css/styles.css
@@ -94,11 +94,12 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/order-background.jpg);
+    url(../images/order-background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .page-title {
